# create-subtitles-movie.sh

./: 50on.srt  50on_v2.srt  Makefile  README.md  create-subtitles-movie.py  my_blender.py  my_srt.py  pyproject.toml
etc/: config.py
sample_srt/: 50on.srt  50on_v2.srt  roudoku_01.srt
share/assets/: camera_and_lights.blend  room.blend
src/: create-subtitles-movie.py  my_blender.py  my_srt.py
tests/: test_my_srt.py
